--- a/_posts/2021-05-01-gfs.markdown
+++ b/_posts/2021-05-01-gfs.markdown
@@ -39,8 +39,8 @@ GFS has a
 #### Files:
 
 * Files are divided into fixed-size *chunks*. Each chunk is assigned a global, unique, immutable handle of 64 bit by the master.
-* Chunkservers store the chunk on the local disk as Linux files. They read or write chunk data specified by the handle.
-* For reliability, each chunk is replicated at multiple chunkservers. By default, it's populated in 3 chunkservers.
+* Chunkservers store the chunk on the local disk as Linux files. `They read or write chunk data specified by the handle.`
+* For reliability, `each chunk is replicated at multiple chunkservers`. By default, it's populated in 3 chunkservers.
 
 #### GFS Master:
 * Master maintains all the metadata: *namespace, access control, mapping from files to chunk, location of chunks*, etc.
@@ -61,7 +61,7 @@ GFS has a
     * file and chunk namespace
     * mapping from files to chunks
     * location of each chunk's replicas
-* The file and chunk namespace, mapping from files to chunks are persisted by *logging mutations to an operation log stored* on master's local disk and replicas.
+* The file and chunk namespace, mapping from files to chunks are persisted by *`logging mutations to an operation log stored`* on master's local disk and replicas.
     * In case of a master's crash the information can be retrieved from the logs.
     * The location is not persisted because, on a master startup, it contacts chunkservers for the information they have about the stored chunks.
 
@@ -78,20 +78,66 @@ GFS has a
     * The master can restore the state by loading *Checkpoint1* and replaying the *Log3*
     * Checkpoint is in form of B-Tree, directly mapped to memory
 * Checkpoint can be saved without effecting the master's working. When master wants to create a checkpoint it creates a new log file and starts writing to the new log file. Master instantiates a seperate thread that converts the older log files to checkpoints.
+
+<br/>
+<br/>
+
 <div>
-    <img src="{{ site.baseurl }}/assets/img/GFS.png">
+    <img src="{{ site.baseurl }}/assets/img/gfs/GfsFile.png">
 </div>
 
-### Flow
+<br/>
+
+<div>
+    <img src="{{ site.baseurl }}/assets/img/gfs/GFS.png">
+</div>
+
+
+---
+
+# Read/Write data flow
+
+### Read
 
 1. Using the fixed chunk size, the client APIs transfer the file name and offset bytes into a chunk index within a file.
-2. It sends the master a request containing the file name and chunk index. 
-    * *ControlMsg: Client $$\rightarrow$$ Master, [filename, chunk index]*
-3. Master replies with the chunk handles and list of replicas.
+2. It sends the master a request containing the file name and file offset.  
+    * *ControlMsg: Client $$\rightarrow$$ Master, [filename, offset]*
+3. Master replies with the chunk handles and list of replicas with lastest version of the chunk.
     * *ControlMsg: Master $$\rightarrow$$ Client, [chunk handle, chunk location]*
     * This information is cached at the client by filename and chunk index as a key.
 4. Client sends the request to replicas, probably the closest one.
     * *ControlMsg: Client $$\rightarrow$$ ChunkServer, [chunk handle, byte-range within chunk]*
 5. Further reads of the same chunk do not require master-client interaction until the cached information with the client expires.
 
+### Write
 
+<div>
+    <img src="{{ site.baseurl }}/assets/img/gfs/gfsWrite.png">
+</div>
+
+
+
+1. Client asks Master about the file's latest chunk.
+2. If Master sees chunk has no primary (or lease expired)
+    * if no chunkserver have latest version #error
+    * pick primary *P* and secondaries from those latest version
+    * increament version #, write to disk
+    * tell *P* and secondaries about who they are, and new version #
+    * replicas write new version # to disk
+3. Master reports back client about primary and secondary
+4. Client sends data to all , waits
+5. Client sends Primary to append
+6. Primary checks if lease has not expired, and chunk has space
+7. Primary picks an offset (end of chunk)
+8. Primary writes chunk file (Linux file)
+9. Primary tells each secondaty the offset, tells to append to chunk file
+10. Primary waits for all secondaries to reply, or timeout secondary can reply "error" e.g. out of disk space.
+11. Primary tell Client "Ok" or "error"
+12. Client retries from start if error.
+
+---
+
+### Resources
+
+1. [MIT Distributed Systems Notes]({{ site.baseurl }}/assets/img/gfs/notes.txt)
+2. [GFS Paper]({{ site.baseurl }}/assets/img/gfs/gfs_paper.pdf)
