update profile for amazon

--- a/_experience/4.md
+++ b/_experience/4.md
@@ -3,7 +3,7 @@ layout: default
 name: Microsoft
 location: Hyderabad, India 
 from: Decemeber 2020
-to: Present
+to: July 2022
 position: Software Development Engineer II
 logo: ms_logo.png
 ---
