--- a/_posts/2022-01-03-ddia.markdown
+++ b/_posts/2022-01-03-ddia.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+comments: true
 title: Design Data Intensive Applications
 date: 2022-01-03 00:12:00-0400
 # description: Instance
